--- a/index.html
+++ b/index.html
@@ -14,11 +14,13 @@
 		<meter min="0" max="120" id="time-indicator"></meter>
 		<button id="restart-btn">Restart</button>
 		<footer>
-			By <a href="https://zmyaro.com" target="_blank">Zachary Yaro</a>
+			With &lt;3 from <a href="https://aesthetic.games" target="_blank">Aesthetician Labs</a>
 			&nbsp;&middot;&nbsp;
-			Based on <a href="https://pancelor.itch.io/make-ten" target="_blank">this version by pancelor</a>
+			Based on <a href="https://github.com/zmyaro/make-ten" target="_blank">zmyaro/make-ten</a>
 			&nbsp;&middot;&nbsp;
-			<a href="https://github.com/zmyaro/make-ten" target="_blank">Source code</a>
+			<a href="https://pancelor.itch.io/make-ten" target="_blank">Original by pancelor</a>
+			&nbsp;&middot;&nbsp;
+			<a href="https://github.com/zmyaro/make-ten" target="_blank">Source</a>
 		</footer>
 	</body>
 </html>
