Display date and title

--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Make 10</title>
+		<title>Make 10 Daily</title>
 		<meta name="viewport" content="width=device-width" />
 		<link rel="stylesheet" type="text/css" href="styles.css" />
 		<script defer src="game.js"></script>
 	</head>
 	<body>
-		<div id="score"></div>
+		<div class="top">
+			<div id="title">Make Ten Daily</div>
+			<div id="date"></div>
+		</div>
+		<div id="score" class="top"></div>
 		<div id="game-grid" touch-action="none">
 			<div id="selection-rect"></div>
 		</div>
