--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
 			<div id="title">Make Ten Daily</div>
 			<div id="date"></div>
 		</div>
-		<div id="score" class="top"></div>
+		<div class="top">
+			<div id="score"></div>
+			<div id="attempts"></div>
+		</div>
 		<div id="game-grid" touch-action="none">
 			<div id="selection-rect"></div>
 		</div>
