Track high score

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 		</div>
 		<div class="top">
 			<div id="score"></div>
+			<div id="highScore"></div>
 			<div id="attempts"></div>
 		</div>
 		<div id="game-grid" touch-action="none">
